--- a/SithAcademy/SithAcademy/Views/Home/Error.cshtml
+++ b/SithAcademy/SithAcademy/Views/Home/Error.cshtml
@@ -2,8 +2,7 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">The Dark Side has prevented your request from going through. Meditate upon your failure or try again later.</h2>
 <br />
 <br />
-<div class="text-left h4">  Go back to <a asp-controller="Home" asp-action="Index">Home</a> Page</div>
+<div class="text-left h4"> Go back to <a asp-controller="Home" asp-action="Index">Home</a> Home Page</div>
