--- a/SithAcademy/SithAcademy/Views/Shared/_Layout.cshtml
+++ b/SithAcademy/SithAcademy/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                             int academyId = await OverseerService.GetAcademyIdByOverseerIdAsync(overseerId);
 
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Academy" asp-action="Details" asp-route-id="@academyId">View Academy</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Academy" asp-action="Details" asp-route-id="@academyId">Academy Panel</a>
                             </li>
                         }
                         else
