--- a/SithAcademy/SithAcademy/Views/Resource/Edit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Resource/Edit.cshtml
@@ -1,4 +1,12 @@
 ﻿@model ResourceFormViewModel
+@{
+    ViewBag.Title = "Edit Resource Details";
+}
+
+<h2 class="text-center">@ViewBag.Title</h2>
+<hr />
+
+<h4 class="mb-3 text-center text-danger">Always consult with the High Inquisitor prior to modifying a resource's details.</h4>
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
