--- a/SithAcademy/SithAcademy/Views/Trial/Edit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Trial/Edit.cshtml
@@ -7,6 +7,8 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
+<h4 class="mb-3 text-center text-danger">Always consult with the High Inquisitor prior to modifying a trial's details.</h4>
+
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
         <form asp-action="Edit" method="post">
