--- a/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
+++ b/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using SithAcademy.Web.ViewModels.Academy
 @using SithAcademy.Web.ViewModels.Location
 @using SithAcademy.Web.ViewModels.Resource
+@using SithAcademy.Web.ViewModels.Homework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
