--- a/SithAcademy/SithAcademy/Views/Homework/Submit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Homework/Submit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SubmitHomeworkViewModel
 
 @{
-    ViewBag.Title = $"Submit Homework to {Model.TrialInfo.Title}";
+    ViewBag.Title = $"Submit Homework to {Model.TrialInfo!.Title}";
 }
 
 <h3 class="text-center text-danger">@ViewBag.Title</h3>
