--- a/SithAcademy/SithAcademy/Views/Homework/Edit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Homework/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
         <form asp-action="Edit" method="post">
             <div class="mb-3">
-                <label asp-for="Content" class="form-label">Below you will find your current homework.</label>
+                <label asp-for="Content" class="form-label"></label>
                 <textarea asp-for="Content" class="form-control" rows="4"></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
