--- a/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
+++ b/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using SithAcademy.Web.ViewModels.Location
 @using SithAcademy.Web.ViewModels.Resource
 @using SithAcademy.Web.ViewModels.Homework
+@using SithAcademy.Web.ViewModels.Query
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
