--- a/SithAcademy/SithAcademy/Views/Overseer/Home.cshtml
+++ b/SithAcademy/SithAcademy/Views/Overseer/Home.cshtml
@@ -1,1 +1,19 @@
-﻿<h3 class="mb-4">Welcome, Lord @User.Identity!.Name</h3>
+﻿@using SithAcademy.Services.Data.Interfaces;
+@using SithAcademy.Web.Infrastructure.Extensions;
+@inject IOverseerService OverseerService
+@{
+    string userId = User.GetId()!;
+    bool userIsOverseer = await OverseerService.UserIsOverseerAsync(userId);
+}
+
+@if (userIsOverseer)
+{
+    string overseerId = await OverseerService.GetOverseerIdAsync(userId);
+    string overseerTitle = await OverseerService.GetOverseerTitleAsync(overseerId);
+
+    <h3 class="mb-4">Welcome, Lord @overseerTitle</h3>
+    <div class="container text-start">
+        <p class="mb-2">You can modify your academy's details from the Academy Panel section.</p>
+        <p class="mb-2">You can review homeworks from the Homeworks section.</p>
+    </div>
+}
